objects/Product_Management__c.object
<CustomObject>
    <description>Product or Market Focus</description>
    <fields>
        <fullName>Additionnal_biz_previous_year__c</fullName>
        <description>Additionnal biz/ previous year expected in $</description>
        <inlineHelpText>Additionnal biz/ previous year expected in $</inlineHelpText>
        <label>Additionnal biz/ previous year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Details_comments__c</fullName>
        <description>Details &amp; comments</description>
        <label>Details &amp; comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F15_Total__c</fullName>
        <formula>FY15_Q1__c + FY15_Q2__c + FY15_Q3__c + FY15_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F15 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q1__c</fullName>
        <label>FY13 Q1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q2__c</fullName>
        <label>FY13 Q2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q3__c</fullName>
        <label>FY13 Q3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Total__c</fullName>
        <formula>FY13_Q1__c+FY13_Q2__c+FY13_Q3__c+FY13_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY13 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY14_Total__c</fullName>
        <formula>FY14_Q1__c + FY14_Q2__c + FY14_Q3__c + FY14_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY14 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY16__c</fullName>
        <label>FY16</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY17__c</fullName>
        <label>FY17</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY18__c</fullName>
        <label>FY18</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Stage__c</fullName>
        <label>PM Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seed</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Active</fullName>
                </value>
                <value>
                    <fullName>Application Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales Pipeline</fullName>
                </value>
                <value>
                    <fullName>Sales Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture_or_animated_Gif__c</fullName>
        <label>Picture or animated Gif</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Line_Group__c</fullName>
        <label>Product Line Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Connectors &amp; Fittings</fullName>
                </value>
                <value>
                    <fullName>Global High Voltage</fullName>
                </value>
                <value>
                    <fullName>Insulation &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>Metering &amp; Smart Grid</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith</fullName>
                </value>
                <value>
                    <fullName>TOTAL OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All ProductLines</fullName>
                </value>
                <value>
                    <fullName>AMPACT</fullName>
                </value>
                <value>
                    <fullName>AMP Misc</fullName>
                </value>
                <value>
                    <fullName>Area Lighting Research</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Accessories</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Connectors</fullName>
                </value>
                <value>
                    <fullName>CI range</fullName>
                </value>
                <value>
                    <fullName>CLP-Installation Service</fullName>
                </value>
                <value>
                    <fullName>Commercial Product Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Commercial Product Con &amp; Fittings</fullName>
                </value>
                <value>
                    <fullName>Commercial Product HV</fullName>
                </value>
                <value>
                    <fullName>Commercial Product Insu &amp; Prot</fullName>
                </value>
                <value>
                    <fullName>Commercial Product MSG</fullName>
                </value>
                <value>
                    <fullName>Crompton Analogue</fullName>
                </value>
                <value>
                    <fullName>Crompton Digital (incl. CI Range)</fullName>
                </value>
                <value>
                    <fullName>CROMPTON ELECTRONIC</fullName>
                </value>
                <value>
                    <fullName>CTs</fullName>
                </value>
                <value>
                    <fullName>Distribution Automation</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith FBA</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Loose Gear</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Modis</fullName>
                </value>
                <value>
                    <fullName>Dulmison Business</fullName>
                </value>
                <value>
                    <fullName>Dulmison Insulators</fullName>
                </value>
                <value>
                    <fullName>GURO Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>GURO Insulating Materials</fullName>
                </value>
                <value>
                    <fullName>Guro Street Lighting</fullName>
                </value>
                <value>
                    <fullName>Hellstern</fullName>
                </value>
                <value>
                    <fullName>HV Arrester</fullName>
                </value>
                <value>
                    <fullName>HV Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>HV Comp / Axicom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>Product_Manager__c</referenceTo>
        <relationshipName>Product_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Sales_related_to_EMEA__c</fullName>
        <label>% Total Sales related to EMEA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Web_link__c</fullName>
        <label>Web link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X5_years_Revenue__c</fullName>
        <formula>FY14_Q1__c + FY14_Q2__c + FY14_Q3__c + FY14_Q4__c+FY15_Q1__c + FY15_Q2__c + FY15_Q3__c + FY15_Q4__c+ FY16__c+ FY17__c+FY18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 years Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>in_risk__c</fullName>
        <formula>Additionnal_biz_previous_year__c - secured__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ in risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>secured__c</fullName>
        <label>$ secured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Market Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Details_comments__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Axicom_HV_Market_updates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Axicom HV Market updates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Market Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>